--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Efficio</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_new_store">Create new store</string>
     <string name="rename_current_store">Rename current store</string>
     <string name="delete_current_store">Delete current store</string>
@@ -10,4 +8,9 @@
     <string name="aisles">Aisles</string>
     <string name="edit_aisles">Edit aisles</string>
     <string name="settings">Settings</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="hello_blank_fragment">Hello blank Fragment</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
 </resources>
