Hack together a create account endpoint
Kind of works, too (not the UI)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,13 +3,15 @@
     <string name="aisles">Rayons</string>
     <string name="app_name">Efficio</string>
     <string name="create_new_store">Créer un nouveau magasin</string>
+    <string name="create_user">Créer un utilisateur</string>
     <string name="delete_current_store">Supprimer le magasin actuel</string>
     <string name="edit_aisles">Éditer les rayons</string>
-    <string name="login">Identifiant</string>
+    <string name="email">Courriel</string>
     <string name="password">Mot de passe</string>
     <string name="rename_current_store">Renommer le magasin actuel</string>
     <string name="settings">Paramètres</string>
     <string name="sign_in">Se connecter</string>
     <string name="sign_up">Créer un compte</string>
     <string name="store">Magasin</string>
+    <string name="username">Identifiant</string>
 </resources>
