--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="hello_blank_fragment" translatable="false">Hello blank Fragment</string>
     <string name="user">User</string>
     <string name="delete_user">Delete user</string>
+    <string name="save">Save</string>
+    <string name="store_name">Store name</string>
 </resources>
